src/objects/Case_Configuration__c.object
<CustomObject>
    <fields>
        <fullName>Level_1__c</fullName>
        <label>Nivel 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level_2__c</fullName>
        <label>Nível 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Register_Type__c</fullName>
        <label>Tipo de Registro</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Workflow__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Workflow</label>
        <type>Checkbox</type>
    </fields>
    <label>Configuração de Caso</label>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>Register_Type__c</columns>
        <columns>Level_1__c</columns>
        <columns>Level_2__c</columns>
        <columns>Workflow__c</columns>
        <filterScope>Everything</filterScope>
        <label>Tudo</label>
    </listViews>
    <listViews>
        <fullName>An_lise_de_fraude_Samsung_Case_Configuration</fullName>
        <filterScope>Queue</filterScope>
        <label>Análise de fraude Samsung</label>
        <queue>An_lise_de_fraude_Samsung</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Analisedeproduto</fullName>
        <columns>NAME</columns>
        <columns>Register_Type__c</columns>
        <columns>Level_1__c</columns>
        <columns>Level_2__c</columns>
        <columns>Workflow__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Level_1__c</field>
            <operation>equals</operation>
            <value>Análise do Produto</value>
        </filters>
        <label>Analise de produto</label>
    </listViews>
    <listViews>
        <fullName>Atendimento_Samsung_Ativo_Case_Configuration</fullName>
        <filterScope>Queue</filterScope>
        <label>Atendimento Samsung Ativo</label>
        <queue>Atendimento_Samsung_Ativo</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Atendimento_Samsung_Case_Configuration</fullName>
        <filterScope>Queue</filterScope>
        <label>Atendimento Samsung</label>
        <queue>Atendimento_Samsung</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Atendimento_Samsung_Suporte_Case_Configuration</fullName>
        <filterScope>Queue</filterScope>
        <label>Atendimento Samsung Suporte</label>
        <queue>Atendimento_Samsung_Suporte</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CD350_Samsung_Case_Configuration</fullName>
        <filterScope>Queue</filterScope>
        <label>CD350 Samsung</label>
        <queue>CD350_Samsung</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Cancelamento</fullName>
        <columns>NAME</columns>
        <columns>Register_Type__c</columns>
        <columns>Level_1__c</columns>
        <columns>Level_2__c</columns>
        <columns>Workflow__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Level_1__c</field>
            <operation>equals</operation>
            <value>Cancelamento</value>
        </filters>
        <label>Cancelamento</label>
    </listViews>
    <listViews>
        <fullName>EntregaComNotaFiscal</fullName>
        <columns>NAME</columns>
        <columns>Register_Type__c</columns>
        <columns>Level_1__c</columns>
        <columns>Level_2__c</columns>
        <columns>Workflow__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Level_1__c</field>
            <operation>equals</operation>
            <value>Entrega com Nota Fiscal</value>
        </filters>
        <label>Entrega com Nota Fiscal</label>
    </listViews>
    <listViews>
        <fullName>EntregaSemNotaFiscal</fullName>
        <columns>NAME</columns>
        <columns>Register_Type__c</columns>
        <columns>Level_1__c</columns>
        <columns>Level_2__c</columns>
        <columns>Workflow__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Level_1__c</field>
            <operation>equals</operation>
            <value>Entrega sem Nota Fiscal</value>
        </filters>
        <label>Entrega sem Nota Fiscal</label>
    </listViews>
    <listViews>
        <fullName>Financeiro_Contas_a_Receber_Samsung_Case_Configuration</fullName>
        <filterScope>Queue</filterScope>
        <label>Financeiro – Contas a Receber Samsung</label>
        <queue>Financeiro_Contas_a_Receber_Samsung</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Processamento_Refaturamento_Samsung_Case_Configuration</fullName>
        <filterScope>Queue</filterScope>
        <label>Processamento Refaturamento Samsung</label>
        <queue>Processamento_Refaturamento_Samsung</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Processamento_Samsung_Case_Configuration</fullName>
        <filterScope>Queue</filterScope>
        <label>Processamento Samsung</label>
        <queue>Processamento_Samsung</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Suporte_Comercial_Samsung_Case_Configuration</fullName>
        <filterScope>Queue</filterScope>
        <label>Suporte Comercial Samsung</label>
        <queue>Suporte_Comercial_Samsung</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Troca</fullName>
        <columns>NAME</columns>
        <columns>Register_Type__c</columns>
        <columns>Level_1__c</columns>
        <columns>Level_2__c</columns>
        <columns>Workflow__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Level_1__c</field>
            <operation>equals</operation>
            <value>Troca</value>
        </filters>
        <label>Troca</label>
    </listViews>
    <nameField>
        <displayFormat>Config-{00000000}</displayFormat>
        <label>ID de Configuração Caso</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Configuração de Caso</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>